--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: '#publications'
     weight: 50
   - name: Recent Projects
-    url: '#recent projects'
+    url: '#recent-projects'
     weight: 60
   - name: Contact
     url: '#contact'
